bug 512677 New command specifying an empty comment
A new command `\trivial` is introduced signaling that the entity is "trivial" and does not need to be documented.
Advantage is that the entity will appear in the documentation without using a setting like `EXTRACT_ALL`

--- a/doc/commands.dox
+++ b/doc/commands.dox
@@ -235,6 +235,7 @@ documentation:
 \refitem cmdthrows \\throws
 \refitem cmdtodo \\todo
 \refitem cmdtparam \\tparam
+\refitem cmdtrivial \\trivial
 \refitem cmdtypedef \\typedef
 \refitem cmdplantumlfile \\plantumlfile
 \refitem cmdunion \\union
@@ -1509,6 +1510,15 @@ Description
 \endverbatim
 
   \sa section \ref cmdfn "\\fn", \ref cmdproperty "\\property", and \ref cmdtypedef "\\typedef".
+
+<hr>
+\section cmdtrivial \\trivial
+
+  \addindex \\trivial
+  Indicates that the entity doesn't need documentation as it is "trivial", but that it should be 
+  show in the documentation anyway.
+
+  \sa \ref cfg_extract_all "EXTRACT_ALL"
 
 <hr>
 \section cmdvhdlflow \\vhdlflow [(title for the flow chart)]
