--- a/doc/commands.dox
+++ b/doc/commands.dox
@@ -1515,8 +1515,8 @@ Description
 \section cmdtrivial \\trivial
 
   \addindex \\trivial
-  Indicates that the entity doesn't need documentation as it is "trivial", but that it should be 
-  show in the documentation anyway.
+  Indicates that the entity doesn't need documentation as it is "trivial", but that it should
+  anyway be shown in the documentation.
 
   \sa \ref cfg_extract_all "EXTRACT_ALL"
 
