issue #11702 LaTeX output does not properly break lines with long indexed parameters
making the `\mbox` usage a bit more sophisticated (checking the length so long links can be wrapped) using `\doxymbox`.
Based on
- idea from https://tex.stackexchange.com/a/18577/44119 , there were problems with a.o. `\hbox` in hyperlinks, so using:
  - strategy / code used for length determination of tables

--- a/templates/latex/doxygen.sty
+++ b/templates/latex/doxygen.sty
@@ -657,9 +657,21 @@
   \end{list}%
 }
 
+\newsavebox{\doxymboxbox}
+\newlength{\doxymboxlength}
+\newcommand{\doxymbox}[1]{%
+  \sbox{\doxymboxbox}{#1}%
+  \setlength{\doxymboxlength}{\wd\doxymboxbox}%
+  \ifthenelse{\doxymboxlength>\linewidth}{%
+    #1%
+  }{%
+    \mbox{#1}%
+  }%
+}
+
 % Used when hyperlinks are turned on
 \newcommand{\doxylink}[2]{%
-  \mbox{\hyperlink{#1}{#2}}%
+  \doxymbox{\hyperlink{#1}{#2}}%
 }
 
 % Used for the cite command
@@ -697,7 +709,7 @@
 % Third argument is the SectionType, see the doxygen internal
 % documentation for the values (relevant: Page ... Subsubsection).
 \newcommand{\doxysectlink}[3]{%
-  \mbox{\hyperlink{#1}{#2}}%
+  \doxymbox{\hyperlink{#1}{#2}}%
 }
 % Used when hyperlinks are turned off
 \newcommand{\doxyref}[3]{%
