--- a/doc/lists.dox
+++ b/doc/lists.dox
@@ -126,7 +126,7 @@ unnested lists.
 See \ref cmdarg "\\arg" and \ref cmdli "\\li" for more info.
 
 \htmlonly
-Go to the <a href="grouping.html">next</a> section or return to the
+Go to the <a href="requirements.html">next</a> section or return to the
  <a href="index.html">index</a>.
 \endhtmlonly
 
