PR #11839 Add requirements traceability
Various fixes:
- styling missing_req improved and separate class via missing satisfies and
  missing verifies sections.
- changed options of REQ_TRACEABILITY_INFO to NO/YES/UNSATISFIES_ONLY/UNVERIFIES_INFO.
- Added GENERATE_REQUIREMENTS option to force disabling the requirements page
  completely. Also removes verifies and satisfies references.
- removed double referenced when coming from the same symbols and id and
  title are the same.
- REQ--001 was not parsed properly due to markdown changing it to &ndash;
- changed documentation to make clear requirement title is optional
- satisfied/verifies title could leak into the type of the symbol
  documented.
- warn about @satisfies or @verifies inside @requirement comment block

--- a/doc/commands.dox
+++ b/doc/commands.dox
@@ -1438,7 +1438,7 @@ Structural indicators
   Equivalent to \ref cmdrelatesalso "\\relatesalso"
 
 <hr>
-\section cmdrequirement \\requirement \<id\> (title)
+\section cmdrequirement \\requirement \<id\> [(title)]
 
   \addindex \\requirement
   Indicates that a comment block contains documentation for a requirement.
