issue #11939 LaTeX output does not properly break lines with long doxylink
Some improvements but still problems with (major problems) with `{` and `}`
Temporary stalling / withdrawing

--- a/templates/latex/doxygen.sty
+++ b/templates/latex/doxygen.sty
@@ -896,3 +896,9 @@
 \makeatother
 \AddEnumerateCounter{\enumalphalphcnt}{\@enumalphalphcnt}{aa}
 \AddEnumerateCounter{\enumAlphAlphcnt}{\@enumAlphAlphcnt}{AA}
+
+\usepackage{xurl}
+\newcommand{\doxyIndexDescription}[1]{%
+  \begin{NoHyper}\url{#1}\end{NoHyper}%
+}
+
