Consistency corrections regarding usage of extensions.
Consistency corrections regarding usage of extensions.
(Removed an incorrect `s` in config.xml)

--- a/doc/commands.dox
+++ b/doc/commands.dox
@@ -2505,7 +2505,7 @@ Commands to create links
   \addindex \\cite
   Adds a bibliographic reference in the text and in the list of bibliographic
   references. The \<label\> must be a valid BibTeX label that can be found
-  in one of the .bib files listed in \ref cfg_cite_bib_files "CITE_BIB_FILES".
+  in one of the `.bib` files listed in \ref cfg_cite_bib_files "CITE_BIB_FILES".
   For the \LaTeX output the formatting of the reference in the text can be
   configured with \ref cfg_latex_bib_style "LATEX_BIB_STYLE". For other
   output formats a fixed representation is used. Note that using this
@@ -3345,7 +3345,7 @@ Commands for visual enhancements
 \endverbatim
 
   If the contents of the code block are in a language that Doxygen cannot parse, Doxygen
-  will just show the output as-is. You can make this explicit using .unparsed, or by
+  will just show the output as-is. You can make this explicit using `.unparsed`, or by
   giving some other extension that Doxygen doesn't support, e.g.
 
 \verbatim
